# strongswan

./: configure.ac
conf/: Makefile.am
conf/plugins/: pipe.opt
src/frontends/android/app/src/main/java/org/strongswan/android/logic/: CharonVpnService.java
src/libcharon/: Makefile.am
src/libcharon/plugins/pipe/: Makefile.am  pipe_backend.py  pipe_impl.c  pipe_impl.h  pipe_plugin.c  pipe_plugin.h  pipe_provider.c  pipe_provider.h
